# src/main/kotlin/red/rabbit/routes/HabitRoutes.kt
@@ -1,25 +1,43 @@
 package red.rabbit.routes
 
-import io.ktor.http.*
+import io.ktor.http.HttpStatusCode.Companion.BadRequest
+import io.ktor.http.HttpStatusCode.Companion.OK
 import io.ktor.server.application.*
 import io.ktor.server.request.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
-import kotlinx.serialization.Serializable
+import io.ktor.server.util.*
+import red.rabbit.models.BaseResponse
+import red.rabbit.models.habit.Habit
+import red.rabbit.models.habit.HabitRequest
+import red.rabbit.models.habit.HabitResponse
 import red.rabbit.services.HabitService
 
 fun Route.habitRouting() {
 
-    @Serializable
-    data class HabitType(val name: String, val isGood: Boolean)
-
     route("/habits") {
         val habitService = HabitService()
 
-        post("/add") {
-            val habit = call.receive<HabitType>()
-            habitService.addNewHabit(habit.name, habit.isGood)
-            call.respondText("OK", status = HttpStatusCode.Created)
+        get() {
+            call.application.log.info("Getting all habits")
+            val habits = habitService.allHabits()
+            call.respond(OK, habits)
         }
+
+        post("/add") {
+            val habitRequest = call.receive<HabitRequest>()
+            call.application.log.info("Creating habit with name ${habitRequest.name}")
+            val habit = habitService.addNewHabit(habitRequest.name, habitRequest.isGood)
+            call.respond(OK, HabitResponse(BaseResponse("success", "Habit with has been created"),
+                habitId = habit?.id))
+        }
+
+        get("{id?}") {
+            val id = call.parameters.getOrFail<Int>("id").toInt()
+            val habit = habitService.habit(id)
+            call.respond(OK, HabitResponse(BaseResponse("success", "Habit"),
+                habitName = habit?.name, habitIsGood = habit?.isGood))
+        }
+
     }
 }
